[gd_scene load_steps=8 format=3 uid="uid://4biyymwgcuur"]

[ext_resource type="Script" uid="uid://cbh4oolhy7vpl" path="res://assets/scripts/main.gd" id="1_dfgan"]
[ext_resource type="PackedScene" uid="uid://conmxp8b4eu7y" path="res://assets/scenes/auto_scroller.tscn" id="1_mr7gh"]
[ext_resource type="PackedScene" uid="uid://bkwv364gupll8" path="res://assets/scenes/pipe.tscn" id="2_etxf0"]
[ext_resource type="PackedScene" uid="uid://dq74j72gf75an" path="res://assets/scenes/bird.tscn" id="2_kpi06"]
[ext_resource type="PackedScene" uid="uid://dgykkqwjcri0r" path="res://assets/scenes/ground.tscn" id="4_sfrgt"]
[ext_resource type="PackedScene" uid="uid://ck0s71chbe0w2" path="res://assets/scenes/game_over.tscn" id="6_vesw4"]
[ext_resource type="PackedScene" uid="uid://dwdbr0otw8hfs" path="res://assets/scenes/menu.tscn" id="7_xplbd"]

[node name="Main" type="Node"]
script = ExtResource("1_dfgan")
pipe_scene = ExtResource("2_etxf0")

[node name="AutoScroller" parent="." instance=ExtResource("1_mr7gh")]

[node name="Bird" parent="." instance=ExtResource("2_kpi06")]
modulate = Color(0.760059, 0.886766, 0.784677, 1)
position = Vector2(207, 446)
scale = Vector2(1.6, 1.6)

[node name="Ground" parent="." instance=ExtResource("4_sfrgt")]
z_index = 2

[node name="PipeSpawner" type="Timer" parent="."]
wait_time = 1.8

[node name="Score" type="Label" parent="."]
z_index = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.5
offset_right = 34.5
offset_bottom = 23.0
grow_horizontal = 2
scale = Vector2(1.37787, 1.38892)
theme_override_font_sizes/font_size = 26
text = "SCORE: 0"

[node name="GameOver" parent="." instance=ExtResource("6_vesw4")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(440, 460)

[node name="Menu" parent="." instance=ExtResource("7_xplbd")]

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeSpawner" to="." method="_on_pipe_spawner_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
[connection signal="end_game" from="Menu" to="." method="_on_menu_end_game"]
[connection signal="start_game" from="Menu" to="." method="_on_menu_start_game"]
